[package]
name = "fie"
version = "0.14.0"
authors = ["Douman <douman@gmx.se>"]
repository = "https://github.com/DoumanAsh/fie"
description = "Small and cute social media utility."
keywords = ["twitter", "gab", "minds", "mastodon"]
license = "Apache-2.0"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
edition = "2018"

[dependencies.tokio-global]
version = "0.2"
features = ["single"]

[dependencies.yukikaze]
version = "0.8"
default-features = false
features = ["rt", "flate2-c"]

[dependencies.structopt]
version = "0.2"
optional = true
features = ["wrap_help", "suggestions"]

[dependencies]
memmap = "0.7"

data-encoding = "2"
percent-encoding = "1"
rand = "0.6"
ring = "0.14"

serde = "1"
serde_derive = "1"
mime_guess = "2.0.0-alpha.6"

toml = { version = "0.5", optional = true }
dirs = { version = "1", optional = true }

[features]
cli = ["structopt", "toml", "dirs"]

[[bin]]
name = "fie"
path = "src/cli/main.rs"
required-features = ["cli"]

[lib]
name = "fie"
path = "src/lib/lib.rs"

[profile.release]
lto = true
opt-level = "z"

[badges]
appveyor = { repository = "DoumanAsh/fie", branch = "master", service = "github" }
travis-ci = { repository = "DoumanAsh/fie", branch = "master" }
