[package]
name = "fie"
version = "0.15.0"
authors = ["Douman <douman@gmx.se>"]
repository = "https://github.com/DoumanAsh/fie"
description = "Small and cute social media utility."
keywords = ["twitter", "gab", "minds", "mastodon"]
license = "Apache-2.0"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
edition = "2018"

[dependencies.yukikaze]
git = "https://github.com/DoumanAsh/yukikaze"
branch = "1.0"
#path = "../yukikaze"
features = ["encoding"]

[dependencies.structopt]
version = "0.2"
optional = true
features = ["wrap_help", "suggestions"]

[dependencies.tokio]
version = "0.2.0-alpha"
default-features = false
features = ["rt-full"]

[dependencies]
memmap = "0.7"

data-encoding = "2"
percent-encoding = "2.1"
rand = "0.7"
ring = "0.16"

serde = "1"
serde_derive = "1"
mime_guess = "2"

toml = { version = "0.5", optional = true }
dirs = { version = "2", optional = true }

futures-util-preview = { version = "0.3.0-alpha", features = ["nightly", "async-await"] }

[features]
cli = ["structopt", "toml", "dirs"]

[[bin]]
name = "fie"
path = "src/cli/main.rs"
required-features = ["cli"]

[lib]
name = "fie"
path = "src/lib/lib.rs"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[badges]
appveyor = { repository = "DoumanAsh/fie", branch = "master", service = "github" }
travis-ci = { repository = "DoumanAsh/fie", branch = "master" }
