[package]
name = "fie"
version = "0.16.2"
authors = ["Douman <douman@gmx.se>"]
repository = "https://github.com/DoumanAsh/fie"
description = "Small and cute social media utility."
keywords = ["twitter", "gab", "minds", "mastodon"]
license = "Apache-2.0"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
edition = "2018"

[dependencies.yukikaze]
version = "1.0.0"
features = ["encoding"]

[dependencies.structopt]
version = "0.3"
optional = true
features = ["wrap_help", "suggestions"]

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["rt-core", "io-driver", "macros"]
optional = true

[dependencies.log]
version = "0.4"
# It is supposed to be compile time elimination, but actually it is not :(
# Though likely these ifs will be constexpr
features = ["release_max_level_off"]
optional = true

[dependencies]
memmap = "0.7"

data-encoding = "2"
percent-encoding = "2.1"
rand = "0.7"
ring = "0.16"

serde = "1"
serde_derive = "1"
mime_guess = "2"

toml = { version = "0.5", optional = true }
dirs = { version = "2", optional = true }

futures-util = { version = "0.3" }

[features]
cli = ["structopt", "toml", "dirs", "tokio", "log"]

[[bin]]
name = "fie"
path = "src/cli/main.rs"
required-features = ["cli"]

[lib]
name = "fie"
path = "src/lib/lib.rs"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[badges]
appveyor = { repository = "DoumanAsh/fie", branch = "master", service = "github" }
travis-ci = { repository = "DoumanAsh/fie", branch = "master" }
